--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         <img src="466519262_2897149360439113_1437615569582086346_n.jpg" alt="Dining Area">
     </section>
 
+    <h2 style="text-align: center;">Feature Dish</h2>
+
     <section class="image-gallery">
         <img src="Linaga.jpeg" alt="Special Dish">
         <img src="Soup No. 5.jpeg" alt="Special Dish">
